--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,7 +35,7 @@
          <x>0</x>
          <y>0</y>
          <width>595</width>
-         <height>344</height>
+         <height>361</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -53,8 +53,11 @@
         </property>
         <item>
          <widget class="QLabel" name="label">
-          <property name="text">
-           <string notr="true">TextLabel</string>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -109,20 +112,11 @@
     <addaction name="actionZoomIn"/>
     <addaction name="actionZoomOut"/>
     <addaction name="actionNormalSize"/>
-    <addaction name="actionFit_to_Window"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuGo"/>
    <addaction name="menuView"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
@@ -245,14 +239,6 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+0</string>
-   </property>
-  </action>
-  <action name="actionFit_to_Window">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="text">
-    <string>Fit to Window</string>
    </property>
   </action>
  </widget>
