fullscreen mode support

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,9 @@
     </property>
     <item>
      <widget class="QScrollArea" name="scrollArea">
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
@@ -34,8 +37,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>595</width>
-         <height>361</height>
+         <width>597</width>
+         <height>363</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
