--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -55,15 +55,12 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="ImageLabel" name="label">
+         <widget class="ViewerWidget" name="viewer">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -192,9 +189,9 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>ImageLabel</class>
-   <extends>QLabel</extends>
-   <header>imagelabel.h</header>
+   <class>ViewerWidget</class>
+   <extends>QWidget</extends>
+   <header>viewerwidget.hpp</header>
   </customwidget>
  </customwidgets>
  <resources/>
